--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_map">MapActivity</string>
     <string name="title_activity_manage_reminders">ManageRemindersActivity</string>
-
+	<string name="invalid_action_detail">Invalid action %1$s received.</string>
 </resources>
