--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,10 +5,14 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="title_activity_create_reminder">CreateReminderActivity</string>
+    <string name="title_activity_create_reminder">Create a Reminder</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_map">MapActivity</string>
-    <string name="title_activity_manage_reminders">ManageRemindersActivity</string>
+    <string name="title_activity_map">Map of Reminders</string>
+    <string name="title_activity_manage_reminders">Manage Reminders</string>
+    <string name="reminder_name">Reminder name</string>
+    <string name="reminder_address">Address of reminder</string>
+    <string name="reminder_description">Description</string>
+    <string name="reminder_submit">Submit</string>
 
 </resources>
