--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="reminder_description">Description</string>
     <string name="reminder_submit">Submit</string>
 	<string name="invalid_action_detail">Invalid action %1$s received.</string>
+	<string name="create_reminder">Create Reminder</string>
+	<string name="map">Map</string>
 
 </resources>
